--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title> hello cousera</title>
   </head>
   <body>
-    <<h1>hello cousera student </h1>
+    <<h1>hello cousera student im therilled about this course </h1>
   </body>
 </html>
